# NotMe

./: .dockerignore  Makefile  Readme.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  manage.py  pyproject.toml
backend/account/: models.py
backend/account/migrations/: 0001_initial.py
backend/notme/: asgi.py  urls.py  wsgi.py
backend/notme/settings/: __init__.py  base.settings.py
